[gd_scene load_steps=19 format=3 uid="uid://du6scg0nqprkx"]

[ext_resource type="Script" uid="uid://b8jctukc2vsa4" path="res://scripts/ui/echoDeck.gd" id="1_5yc16"]
[ext_resource type="Texture2D" uid="uid://ccuskvidtdhe2" path="res://assets/echoDeck/warrior.png" id="2_2p0xq"]
[ext_resource type="Texture2D" uid="uid://bajwgr45km7xi" path="res://assets/echoDeck/monk.png" id="3_slrej"]
[ext_resource type="Texture2D" uid="uid://bllpf2n2o44tk" path="res://assets/echoDeck/lancer.png" id="4_0rcyc"]
[ext_resource type="Texture2D" uid="uid://47t1jva5q6nx" path="res://assets/echoDeck/1.png" id="4_hjhig"]
[ext_resource type="Texture2D" uid="uid://bas5p868k7gkg" path="res://assets/echoDeck/goblin.png" id="5_4mf3d"]
[ext_resource type="Texture2D" uid="uid://dbv1vg8o17j8u" path="res://assets/echoDeck/2.png" id="6_gdm8m"]
[ext_resource type="Texture2D" uid="uid://cpaqs4bag5bq" path="res://assets/echoDeck/3.png" id="7_p3o5f"]
[ext_resource type="Texture2D" uid="uid://dv37k84ticca7" path="res://assets/echoDeck/4.png" id="8_vo2he"]
[ext_resource type="Texture2D" uid="uid://cxbt2ks1na5bn" path="res://assets/echoDeck/warrior1.png" id="10_ihr7g"]
[ext_resource type="Texture2D" uid="uid://bmwoquxd5r7d0" path="res://assets/echoDeck/monk1.png" id="11_wapqf"]
[ext_resource type="Texture2D" uid="uid://dvlsltbwtrovo" path="res://assets/echoDeck/lancer1.png" id="12_08s4m"]
[ext_resource type="Texture2D" uid="uid://bholg2afaoh5h" path="res://assets/echoDeck/goblin1.png" id="13_y3e3m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kje1l"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_hjhig"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_orrom"]
bg_color = Color(0.54901963, 0.7647059, 0.76862746, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.54901963, 0.7647059, 0.76862746, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tttnm"]
bg_color = Color(0.88235295, 0.83137256, 0.7411765, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.88235295, 0.83137256, 0.7411765, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m666p"]
content_margin_left = 4.0
content_margin_top = 8.0
content_margin_right = 4.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="echoDeck" type="CanvasLayer"]
layer = 2
script = ExtResource("1_5yc16")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="HBoxContainer1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer1" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_kje1l")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer1/PanelContainer1"]
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_hjhig")
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer1/PanelContainer1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer1/PanelContainer1/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Warrior"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer1/PanelContainer1/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_orrom")
theme_override_styles/fill = SubResource("StyleBoxFlat_tttnm")
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer1/PanelContainer1/HBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer1/PanelContainer1/HBoxContainer/Control"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -22.0
offset_top = -52.5
offset_right = 86.0
offset_bottom = 60.5
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("2_2p0xq")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer1/PanelContainer1/HBoxContainer/Control"]
custom_minimum_size = Vector2(108, 113)
layout_mode = 0
offset_left = -22.0
offset_top = -52.5
offset_right = 86.0
offset_bottom = 60.5
value = 100.0
fill_mode = 4
tint_progress = Color(0, 0, 0, 0.5882353)

[node name="CountdownLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer1/PanelContainer1/HBoxContainer/Control"]
layout_mode = 0
offset_left = -22.0
offset_top = -52.5
offset_right = 86.0
offset_bottom = 60.5
horizontal_alignment = 1
vertical_alignment = 1

[node name="SkillButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("4_hjhig")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_kje1l")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer2"]
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_hjhig")
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Monk"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_orrom")
theme_override_styles/fill = SubResource("StyleBoxFlat_tttnm")
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/PanelContainer2/HBoxContainer/Control"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -20.0
offset_top = -53.5
offset_right = 88.0
offset_bottom = 59.5
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("11_wapqf")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="SkillButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("6_gdm8m")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_kje1l")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer3"]
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_hjhig")
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Lancer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer3/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_orrom")
theme_override_styles/fill = SubResource("StyleBoxFlat_tttnm")
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer3/HBoxContainer/Control"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -24.0
offset_top = -39.5
offset_right = 100.0
offset_bottom = 51.5
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("4_0rcyc")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="SkillButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("7_p3o5f")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_kje1l")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/PanelContainer4"]
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_hjhig")
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/PanelContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/PanelContainer4/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Goblin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer4/PanelContainer4/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_orrom")
theme_override_styles/fill = SubResource("StyleBoxFlat_tttnm")
show_percentage = false

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer4/PanelContainer4/HBoxContainer"]
custom_minimum_size = Vector2(50, 25)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer4/PanelContainer4/HBoxContainer/Control"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -13.0
offset_top = -47.5
offset_right = 89.0
offset_bottom = 58.5
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("5_4mf3d")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="SkillButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("8_vo2he")
ignore_texture_size = true
stretch_mode = 5

[node name="MainMenu" type="MenuButton" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 62.0
offset_bottom = 60.0
action_mode = 1
text = "||"
flat = false

[node name="Tab" type="MenuButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
action_mode = 1
text = "="
flat = false

[node name="StatsModal" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dimmer" type="ColorRect" parent="StatsModal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="StatsPanel" type="Panel" parent="StatsModal"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m666p")

[node name="HBoxContainer" type="HBoxContainer" parent="StatsModal/StatsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Column1" type="VBoxContainer" parent="StatsModal/StatsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="StatsModal/StatsPanel/HBoxContainer/Column1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("10_ihr7g")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column1"]
layout_mode = 2
text = "Warrior"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column1"]
layout_mode = 2
text = "HP"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column1"]
layout_mode = 2
text = "Atk"
horizontal_alignment = 1

[node name="Column2" type="VBoxContainer" parent="StatsModal/StatsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="StatsModal/StatsPanel/HBoxContainer/Column2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_slrej")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column2"]
layout_mode = 2
text = "Monk"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column2"]
layout_mode = 2
text = "HP"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column2"]
layout_mode = 2
text = "Atk"
horizontal_alignment = 1

[node name="Column3" type="VBoxContainer" parent="StatsModal/StatsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="StatsModal/StatsPanel/HBoxContainer/Column3"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("12_08s4m")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column3"]
layout_mode = 2
text = "Lancer"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column3"]
layout_mode = 2
text = "HP"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column3"]
layout_mode = 2
text = "Atk"
horizontal_alignment = 1

[node name="Column4" type="VBoxContainer" parent="StatsModal/StatsPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="StatsModal/StatsPanel/HBoxContainer/Column4"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("13_y3e3m")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column4"]
layout_mode = 2
text = "Goblin"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column4"]
layout_mode = 2
text = "HP"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="StatsModal/StatsPanel/HBoxContainer/Column4"]
layout_mode = 2
text = "Atk"
horizontal_alignment = 1

[node name="Exit" type="TextureButton" parent="StatsModal/StatsPanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
ignore_texture_size = true
stretch_mode = 5
